syntax = "proto3";

package chat;

// Raw Events
message ChatEvent {
    string user_id = 1;
    string room_id = 2;
    string journey_id = 3;
    int64 timestamp = 4;

    string message = 5;
    string message_type = 6;
    string chat_type = 7;
}

message JoinEvent {
    string user_id = 1;
    string room_id = 2;
    int64 timestamp = 3;
}

message LeaveEvent {
    string user_id = 1;
    string room_id = 2;
    int64 timestamp = 3;
}

message ReactionEvent {
    string user_id = 1;
    string room_id = 2;
    string message_id = 3;
    string emoji = 4;
    int64 timestamp = 5;
}

message Event {
    oneof kind {
        ChatEvent chat = 1;
        JoinEvent join = 2;
        LeaveEvent leave = 3;
        ReactionEvent reaction = 4;
    }
}


message ProcessedEvent {
    string event_type = 1;       // chat / join / leave / reaction
    string user_id = 2;
    string room_id = 3;
    string journey_id = 4;
    int64 timestamp = 5;         // from incoming event
    string content = 6;          // message | emoji | ""
    string metadata_json = 7;    // JSON-encoded key-value metadata
}

service Router {
    rpc Ingest(Event) returns (ProcessedEvent);
}
